--- a/src/Com/Webpage/FilterComponent/FilterComponent.css
+++ b/src/Com/Webpage/FilterComponent/FilterComponent.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 .filterDiv {
     float: left;
@@ -45,11 +46,24 @@
   }
   
   .btn:hover {
-    background-color: #ddd;
+    background-color: #f2bb53;
   }
   
   .btn.active {
-    background-color: #666;
+    background-color: #f2bb53;
     color: white;
   }
-  
+  .btn:focus {
+    box-shadow: 0 0 0 .25em #fff;
+  }
+
+  @media screen and (min-width: 280px) and (max-width: 576px) {
+    .btn {
+      border: none;
+      outline: none;
+      padding: 6px 6px;
+      background-color: #f1f1f1;
+      cursor: pointer;
+      font-size: 12px;
+    }
+  }
