--- a/src/Com/Webpage/InstagramFeed/InstagramFeed.css
+++ b/src/Com/Webpage/InstagramFeed/InstagramFeed.css
@@ -27,7 +27,7 @@
   h1.MANUCARD {
     text-align: center;
     font-size: 32px;
-    font-family: serif;
+    font-family: Shoyab,serif;
 }
 p.sub-title {
     text-align: center;
